examples/neg/issue1291.effekt
def main() = {
  val s = "42"
  val answer = s"the answer is ${s}!"
  println(answer)
}